src/objects/Vendor_Inserts__c.object
<CustomObject>
    <fields>
        <fullName>Insert_Value__c</fullName>
        <label>Insert Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Inserts__c</fullName>
        <label>Number of Inserts</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Date__c</fullName>
        <label>Publication Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Vendor Inserts</relationshipLabel>
        <relationshipName>Vendor_Inserts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vendor Inserts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Number_of_Inserts__c</columns>
        <columns>Insert_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>BERITA MINGGU</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Verification</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Number_of_Inserts__c</columns>
        <columns>Insert_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_Issue_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>Publication_Issue_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/12/2016</value>
        </filters>
        <filters>
            <field>Publication_Code__c</field>
            <operation>equals</operation>
            <value>TABL</value>
        </filters>
        <filters>
            <field>Vendor_Number__c</field>
            <operation>equals</operation>
            <value>0433G</value>
        </filters>
        <label>For Verification</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Data</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Number_of_Inserts__c</columns>
        <columns>Insert_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_Issue_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Publication_Code__c</field>
            <operation>equals</operation>
            <value>ST</value>
        </filters>
        <filters>
            <field>Publication_Code__c</field>
            <operation>equals</operation>
            <value>ZB</value>
        </filters>
        <label>Today &apos;s Data - ST/ZB</label>
    </listViews>
    <nameField>
        <label>Vendor Inserts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Inserts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>